# ScoutBoy

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  alembic.ini  conftest.py  docker-compose.full.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: ci.yml  security.yml
apps/web/: Dockerfile  next.config.mjs  package.json  tailwind.config.ts  vitest.config.ts
configs/calibration/: fixtures_v1.yaml  rolefit_calibration_v1.yaml
configs/context/: competition_stakes_v1.yaml  league_strength_v1.yaml  sample_reliability_v1.yaml  team_strength_v1.yaml
configs/identity/: statsbomb_transfermarkt_overrides_v1.yaml
configs/metrics/: canonical_metrics_v1.yaml
configs/playstyles/: concerns_v1.yaml  playstyles_v1.yaml
configs/roles/: advanced_8.yaml  ball_winning_midfielder.yaml  complete_forward.yaml  deep_lying_playmaker.yaml  inside_forward.yaml  pressing_forward.yaml  shadow_striker.yaml  tempo_controller.yaml  touchline_winger.yaml
configs/showcase/: u23_showcase_v1.yaml
data/contracts/: player_season_metrics_v1.csv  player_season_metrics_v1.example.csv  player_season_metrics_v1.schema.json
data/manifests/: statsbomb_bundesliga_2023_24.json  transfermarkt_player_scores.json
data/reports/: milestone3_cohort_report.json
data/sample/: mock_commercial_provider.json  performance_metrics_sample.csv  players.json  sample_metrics.csv
db/migrations/: env.py
db/seeds/: generate_sample.py  generate_transfermarkt_sample.py
docker/: api.Dockerfile
docs/: agent_notes.md  data_sources.md  discover_scope_change.md  metric_definitions_statsbomb_v1.md  milestone_2_real_data_v0.md  milestone_3_real_cohort.md  milestone_4_engineering_delivery_foundation.md  milestone_5_data_operations.md  milestone_6_rating_calibration.md  rating_methodology.md
docs/adr/: 0001-local-development-and-production-database.md  0002-provider-agnostic-data-provenance.md  0003-config-driven-rating-models.md  0004-snapshot-lifecycle-and-idempotency.md
docs/api_contracts/: openapi.json
docs/data_contracts/: player_season_metrics_v1.md
docs/methodology/: playstyles.md
docs/runbooks/: failed-migration.md  (+4 more)
scripts/: check_api_contract.py  docker_smoke.sh  run_e2e.sh
(+90 files in other folders)
