[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scoutboy"
version = "0.1.0"
description = "ScoutBoy backend, rating engine, market model, and data pipeline (MVP)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "PyYAML>=6.0",
  "python-dateutil>=2.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "httpx>=0.27",
  "ruff>=0.5",
  "black>=24.0",
]
# Heavy analytical deps are optional; the sample/CSV path does not require them.
analytics = [
  "pandas>=2.0",
  "duckdb>=1.0",
]
postgres = [
  "psycopg[binary]>=3.1",
]

# We do not package our own source; imports are resolved via PYTHONPATH (see Makefile / pytest config).
[tool.setuptools]
py-modules = []

[tool.pytest.ini_options]
pythonpath = [
  "packages",
  "packages/rating_engine",
  "packages/shared/python",
  "apps/api",
]
testpaths = [
  "packages/rating_engine/tests",
  "packages/market_model/tests",
  "packages/data_pipeline/tests",
  "apps/api/app/tests",
]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = [
  "*/tests/*",
  "apps/api/app/export_openapi.py",
  "apps/api/app/models/orm/*",
  "apps/api/app/models/schemas/*",
]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["apps/web", "node_modules", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# UP045/UP007: pyupgrade suggests `X | None` unions, which fail at RUNTIME on
# Python 3.9 for SQLAlchemy/FastAPI/Pydantic annotations. We target 3.9, so keep
# Optional[...]. UP035/UP006 (typing.List etc.) left on for non-runtime spots.
# B008: FastAPI uses `Depends()/Query()/Header()` as defaults by design.
ignore = ["E501", "UP045", "UP007", "B008"]

[tool.ruff.lint.per-file-ignores]
# conftest sets env vars before app import; __init__ exposes version constants first.
"conftest.py" = ["E402"]
"packages/rating_engine/rolefit/__init__.py" = ["E402"]
"apps/api/app/export_openapi.py" = ["E402"]

[tool.black]
line-length = 100
target-version = ["py39"]
extend-exclude = "apps/web|node_modules|\\.venv"
